--- a/app_name.json
+++ b/app_name.json
@@ -25,6 +25,7 @@
   "com.miui.aod": "息屏与锁屏编辑",
   "com.miui.backup": "备份",
   "com.miui.bugreport": "用户反馈",
+  "com.miui.cit": "CIT",
   "com.miui.core": "System SDK",
   "com.miui.calculator": "计算器",
   "com.miui.carlink": "CarWith",
