--- a/fold/app_version.json
+++ b/fold/app_version.json
@@ -1,108 +1,108 @@
 {
-	"cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
-	"com.android.browser": "14.7.93",
-	"com.android.calendar": "16.15.0.19-HD",
-	"com.android.camera": "5.1.000680.1",
-	"com.android.contacts": "15.4.0.05",
-	"com.android.deskclock": "15.13.0",
-	"com.android.email": "V13_20230919_d3",
-	"com.android.fileexplorer": "5.0.2.2",
-	"com.android.incallui": "3.2.41",
-	"com.android.mms": "15.1.0.12",
-	"com.android.providers.downloads.ui": "123.10.11.800006",
-	"com.android.quicksearchbox": "10.0.0.1",
-	"com.android.soundrecorder": "5.0.13.9",
-	"com.android.thememanager": "4.2.2.6-HD",
-	"com.android.updater": "8.4.6",
-	"com.baidu.input_mi": "10.6.122.1135",
-	"com.duokan.phone.remotecontroller": "6.6.7M",
-	"com.iflytek.inputmethod.miui": "8.1.8118",
-	"com.mi.health": "3.20.4",
-	"com.milink.service": "15.0.5.0.ceaac61.2919843",
-	"com.mipay.wallet": "6.63.0.4892.2152",
-	"com.miui.accessibility": "6.1.3",
-	"com.miui.aod": "DEV-2.17.2078-12051050",
-	"com.miui.backup": "6.5.1.5",
-	"com.miui.bugreport": "15.0.0.5",
-	"com.miui.calculator": "15.0.10",
-	"com.miui.carlink": "2.0.1-20231207",
-	"com.miui.cit": "0.4.7-SNAPSHOT",
-	"com.miui.cleanmaster": "664.0.231007.release",
-	"com.miui.cloudbackup": "1.12.1.6.16",
-	"com.miui.cloudservice": "1.12.0.1.70",
-	"com.miui.compass": "15.0.10.1",
-	"com.miui.contentcatcher": "1.0.004",
-	"com.miui.contentextension": "3.1.2",
-	"com.miui.core": "1.20.1.5",
-	"com.miui.extraphoto": "1.8.7.2.0",
-	"com.miui.gallery": "3.6.0.13",
-	"com.miui.greenguard": "3.9.11.06-fold",
-	"com.miui.guardprovider": "2.0.3-20231124.0",
-	"com.miui.home": "RELEASE-4.39.14.7750-12111906",
-	"com.miui.huanji": "4.2.0",
-	"com.miui.hybrid": "1.10.3.9",
-	"com.miui.maintenancemode": "3.1.2",
-	"com.miui.mediaeditor": "1.3.5.2",
-	"com.miui.mediaviewer": "v2023103003(MediaViewer-ROM)",
-	"com.miui.miinput": "RELEASE-1.0.2307251043",
-	"com.miui.miservice": "15.0.0.2",
-	"com.miui.mishare.connectivity": "2.21.5",
-	"com.miui.misound": "2.0",
-	"com.miui.miwallpaper": "3.1.7-ALPHA-11242128",
-	"com.miui.newmidrive": "1.12.0.5.99",
-	"com.miui.nextpay": "23.11.01.1",
-	"com.miui.notes": "7.1.6",
-	"com.miui.notification": "1.1.6.9",
-	"com.miui.packageinstaller": "5.1.1.3.1-20230725F",
-	"com.miui.personalassistant": "5.9.3-11212034",
-	"com.miui.phrase": "3.5.4",
-	"com.miui.player": "4.19.2.0-pad",
-	"com.miui.screenrecorder": "2.13.0.7.1",
-	"com.miui.screenshot": "RELEASE-1.4.97-11131423",
-	"com.miui.securityadd": "9.11.56-231206.0.1",
-	"com.miui.securitycenter": "8.7.2-231213.0.1",
-	"com.miui.securitycore": "1.1.9-15-231214",
-	"com.miui.securityinputmethod": "3.2.3",
-	"com.miui.securitymanager": "10.0",
-	"com.miui.themestore": "12.0",
-	"com.miui.thirdappassistant": "4.5",
-	"com.miui.touchassistant": "15.0.0.9.1",
-	"com.miui.tsmclient": "23.12.13.1.f",
-	"com.miui.uireporter": "2.2.1",
-	"com.miui.video": "v2023090990(MiVideo-ROM)",
-	"com.miui.vpnsdkmanager": "24",
-	"com.miui.weather2": "15.0.1.4-HD",
-	"com.miui.yellowpage": "15.202311140",
-	"com.mobiletools.systemhelper": "1.2-20230815",
-	"com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202312152354",
-	"com.tencent.soter.soterserver": "1.0.221024.2",
-	"com.unionpay.tsmservice.mi": "01.00.44",
-	"com.xiaomi.ab": "3.0.1.20231020",
-	"com.xiaomi.account": "R-23.08.07.08",
-	"com.xiaomi.aiasst.service": "5.6.0",
-	"com.xiaomi.aiasst.vision": "4.6.2",
-	"com.xiaomi.aicr": "2.0",
-	"com.xiaomi.barrage": "2.0.9",
-	"com.xiaomi.cameratools": "23.09.26.0",
-	"com.xiaomi.gamecenter.sdk.service": "8.1.6.2",
-	"com.xiaomi.joyose": "2.3.09",
-	"com.xiaomi.location.fused": "4.0.0",
-	"com.xiaomi.macro": "2.2.4.S",
-	"com.xiaomi.market": "5.4.3",
-	"com.xiaomi.metoknlp": "6.0.10",
-	"com.xiaomi.mi_connect_service": "3.1.453.10",
-	"com.xiaomi.mibrain.speech": "1.5.1",
-	"com.xiaomi.migameservice": "0.7.0-B",
-	"com.xiaomi.mirror": "15.00.92.h",
-	"com.xiaomi.mis": "0.5.7-2023112215",
-	"com.xiaomi.misettings": "2.9.9.67-fold",
-	"com.xiaomi.payment": "2.7.2",
-	"com.xiaomi.registration": "4.0.2",
-	"com.xiaomi.scanner": "15.5.1",
-	"com.xiaomi.simactivate.service": "R-23.08.28",
-	"com.xiaomi.ugd": "1.2.0",
-	"com.xiaomi.vipaccount": "4.4.7.P",
-	"com.xiaomi.xaee": "0.2",
-	"com.xiaomi.xmsf": "7.0.1-C",
-	"miui.systemui.plugin": "15.0.1.54.0"
+    "cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
+    "com.android.browser": "14.7.94",
+    "com.android.calendar": "16.15.0.26-HD",
+    "com.android.camera": "5.1.000830.0",
+    "com.android.contacts": "15.4.0.05",
+    "com.android.deskclock": "15.15.0",
+    "com.android.email": "V13_20231107_d1",
+    "com.android.fileexplorer": "5.0.2.5",
+    "com.android.incallui": "3.2.41",
+    "com.android.mms": "15.1.0.12",
+    "com.android.providers.downloads.ui": "123.10.11.800006",
+    "com.android.quicksearchbox": "10.0.0.1",
+    "com.android.soundrecorder": "5.0.17.9",
+    "com.android.thememanager": "4.2.2.6-HD",
+    "com.android.updater": "8.4.7",
+    "com.baidu.input_mi": "10.6.122.1309",
+    "com.duokan.phone.remotecontroller": "6.6.7M",
+    "com.iflytek.inputmethod.miui": "8.1.8132",
+    "com.mi.health": "3.20.4",
+    "com.milink.service": "15.0.6.0.6be2851.2961752",
+    "com.mipay.wallet": "6.63.0.4892.2152",
+    "com.miui.accessibility": "6.2.0",
+    "com.miui.aod": "DEV-2.17.2094-01102052",
+    "com.miui.backup": "6.5.1.6",
+    "com.miui.bugreport": "15.0.0.5",
+    "com.miui.calculator": "15.0.14",
+    "com.miui.carlink": "2.0.1-20231207",
+    "com.miui.cit": "0.5.1-SNAPSHOT",
+    "com.miui.cleanmaster": "670.0.231225.release",
+    "com.miui.cloudbackup": "1.12.1.6.21",
+    "com.miui.cloudservice": "1.12.0.1.91",
+    "com.miui.compass": "15.0.11.1",
+    "com.miui.contentcatcher": "1.0.004",
+    "com.miui.contentextension": "3.1.2",
+    "com.miui.core": "1.20.1.5",
+    "com.miui.extraphoto": "1.8.7.3.1",
+    "com.miui.gallery": "3.6.0.16",
+    "com.miui.greenguard": "3.9.11.22-fold",
+    "com.miui.guardprovider": "2.0.3-20231124.0",
+    "com.miui.home": "RELEASE-4.39.14.7750-12111906",
+    "com.miui.huanji": "4.2.3",
+    "com.miui.hybrid": "1.10.3.9",
+    "com.miui.maintenancemode": "3.1.2",
+    "com.miui.mediaeditor": "1.6.0.3.1",
+    "com.miui.mediaviewer": "v2023123002(MediaViewer-ROM)",
+    "com.miui.miinput": "RELEASE-1.0.2307251043",
+    "com.miui.miservice": "15.0.0.2",
+    "com.miui.mishare.connectivity": "2.21.5",
+    "com.miui.misound": "2.0",
+    "com.miui.miwallpaper": "3.2.0-ALPHA-01171031",
+    "com.miui.newmidrive": "1.12.0.6.07",
+    "com.miui.nextpay": "23.11.14.1",
+    "com.miui.notes": "7.2.4",
+    "com.miui.notification": "1.1.6.10",
+    "com.miui.packageinstaller": "5.1.1.3.1-20230725F",
+    "com.miui.personalassistant": "5.9.3-11212034",
+    "com.miui.phrase": "3.5.4",
+    "com.miui.player": "4.20.2.1-pad",
+    "com.miui.screenrecorder": "2.13.0.9.1",
+    "com.miui.screenshot": "RELEASE-1.4.103-01171436",
+    "com.miui.securityadd": "9.11.58-240108.0.1",
+    "com.miui.securitycenter": "8.8.0-240109.0.1",
+    "com.miui.securitycore": "1.2.1-15-240103",
+    "com.miui.securityinputmethod": "3.2.3",
+    "com.miui.securitymanager": "10.0",
+    "com.miui.themestore": "12.0",
+    "com.miui.thirdappassistant": "4.5",
+    "com.miui.touchassistant": "15.0.0.9.1",
+    "com.miui.tsmclient": "23.12.13.1.f",
+    "com.miui.uireporter": "2.2.4",
+    "com.miui.video": "v2023091090(MiVideo-ROM)",
+    "com.miui.vpnsdkmanager": "24",
+    "com.miui.weather2": "15.0.1.7-HD",
+    "com.miui.yellowpage": "15.202311140",
+    "com.mobiletools.systemhelper": "1.2-20230815",
+    "com.sohu.inputmethod.sogou.xiaomi": "10.32.21.202401081744",
+    "com.tencent.soter.soterserver": "1.0.221024.2",
+    "com.unionpay.tsmservice.mi": "01.00.44",
+    "com.xiaomi.ab": "3.0.1.20231020",
+    "com.xiaomi.account": "R-23.12.01.00",
+    "com.xiaomi.aiasst.service": "5.6.0",
+    "com.xiaomi.aiasst.vision": "4.7.3",
+    "com.xiaomi.aicr": "2.0",
+    "com.xiaomi.barrage": "2.1.0",
+    "com.xiaomi.cameratools": "24.01.08.0",
+    "com.xiaomi.gamecenter.sdk.service": "8.4.2.1",
+    "com.xiaomi.joyose": "2.3.12",
+    "com.xiaomi.location.fused": "4.0.0",
+    "com.xiaomi.macro": "2.2.4.S",
+    "com.xiaomi.market": "5.4.3",
+    "com.xiaomi.metoknlp": "6.0.14",
+    "com.xiaomi.mi_connect_service": "3.1.593.10",
+    "com.xiaomi.mibrain.speech": "1.5.2",
+    "com.xiaomi.migameservice": "0.7.0-B",
+    "com.xiaomi.mirror": "15.01.03.c",
+    "com.xiaomi.mis": "0.5.11-2023122314",
+    "com.xiaomi.misettings": "2.9.9.72-fold",
+    "com.xiaomi.payment": "2.7.2",
+    "com.xiaomi.registration": "4.2.1",
+    "com.xiaomi.scanner": "15.7.1",
+    "com.xiaomi.simactivate.service": "R-23.08.28",
+    "com.xiaomi.ugd": "1.2.0",
+    "com.xiaomi.vipaccount": "4.4.8.P",
+    "com.xiaomi.xaee": "0.2",
+    "com.xiaomi.xmsf": "7.0.1-C",
+    "miui.systemui.plugin": "15.0.1.76.0"
 }
