更新数据库

--- a/app_name.json
+++ b/app_name.json
@@ -17,6 +17,7 @@
   "com.baidu.input_mi": "百度输入法小米版",
   "com.duokan.phone.remotecontroller": "万能遥控",
   "com.iflytek.inputmethod.miui": "讯飞输入法小米版",
+  "com.maxframing.mipad": "远程控制",
   "com.mfashiongallery.emag": "小米画报",
   "com.mi.health": "小米运动健康",
   "com.milink.service": "互联互通服务",
@@ -78,6 +79,7 @@
   "com.miui.vpnsdkmanager": "MiuiVpnSdkManager",
   "com.miui.weather2": "天气",
   "com.miui.yellowpage": "生活黄页",
+  "com.mi.car.padapp": "小米汽车扩展屏",
   "com.mobiletools.systemhelper": "SystemHelper",
   "com.sohu.inputmethod.sogou.xiaomi": "搜狗输入法小米版",
   "com.tencent.soter.soterserver": "SoterService",
@@ -89,6 +91,7 @@
   "com.xiaomi.aiasst.vision": "小爱翻译",
   "com.xiaomi.aicr": "MiAI引擎",
   "com.xiaomi.barrage": "弹幕通知",
+  "com.xiaomi.cajlauncher": "CAJViewer(Linux)",
   "com.xiaomi.cameratools": "相机标定",
   "com.xiaomi.gamecenter.sdk.service": "游戏服务",
   "com.xiaomi.joyose": "Joyose",
@@ -100,6 +103,7 @@
   "com.xiaomi.mi_connect_service": "小米互联通信服务",
   "com.xiaomi.mibrain.speech": "系统语音引擎",
   "com.xiaomi.migameservice": "游戏高能时刻",
+  "com.xiaomi.miralink": "无线显示器",
   "com.xiaomi.mirror": "跨屏协同服务",
   "com.xiaomi.misettings": "小米设置",
   "com.xiaomi.mitukid": "米兔儿童",
@@ -108,6 +112,7 @@
   "com.xiaomi.registration": "运营商服务",
   "com.xiaomi.scanner": "小爱视觉",
   "com.xiaomi.simactivate.service": "小米SIM卡激活服务",
+  "com.xiaomi.uatalive": "MiMonitor",
   "com.xiaomi.ugd": "GPU 驱动更新",
   "com.xiaomi.vipaccount": "小米社区",
   "com.xiaomi.wpslauncher": "WPS Office(Linux)",
