--- a/fold/app_version.json
+++ b/fold/app_version.json
@@ -2,7 +2,7 @@
     "cn.wps.moffice_eng.xiaomi.lite": "3.5.0",
     "com.android.browser": "14.7.94",
     "com.android.calendar": "16.15.0.26-HD",
-    "com.android.camera": "5.1.000830.0",
+    "com.android.camera": "5.1.001030.7",
     "com.android.contacts": "15.4.0.05",
     "com.android.deskclock": "15.15.0",
     "com.android.email": "V13_20231107_d1",
@@ -18,10 +18,10 @@
     "com.duokan.phone.remotecontroller": "6.6.7M",
     "com.iflytek.inputmethod.miui": "8.1.8132",
     "com.mi.health": "3.20.4",
-    "com.milink.service": "15.0.6.0.6be2851.2961752",
+    "com.milink.service": "15.0.6.1.31e2a17.2980921",
     "com.mipay.wallet": "6.63.0.4892.2152",
     "com.miui.accessibility": "6.2.0",
-    "com.miui.aod": "DEV-2.17.2094-01102052",
+    "com.miui.aod": "RELEASE-2102.0.0.0-02291557",
     "com.miui.backup": "6.5.1.6",
     "com.miui.bugreport": "15.0.0.5",
     "com.miui.calculator": "15.0.14",
@@ -38,7 +38,7 @@
     "com.miui.gallery": "3.6.0.16",
     "com.miui.greenguard": "3.9.11.22-fold",
     "com.miui.guardprovider": "2.0.3-20231124.0",
-    "com.miui.home": "RELEASE-4.39.14.7750-12111906",
+    "com.miui.home": "RELEASE-4.39.14.7946-03071903",
     "com.miui.huanji": "4.2.3",
     "com.miui.hybrid": "1.10.3.9",
     "com.miui.maintenancemode": "3.1.2",
@@ -48,7 +48,7 @@
     "com.miui.miservice": "15.0.0.2",
     "com.miui.mishare.connectivity": "2.21.5",
     "com.miui.misound": "2.0",
-    "com.miui.miwallpaper": "3.2.0-ALPHA-01171031",
+    "com.miui.miwallpaper": "3.2.5-ALPHA-02211607",
     "com.miui.newmidrive": "1.12.0.6.07",
     "com.miui.nextpay": "23.11.14.1",
     "com.miui.notes": "7.2.4",
@@ -60,9 +60,9 @@
     "com.miui.screenrecorder": "2.13.0.9.1",
     "com.miui.screenshot": "RELEASE-1.4.103-01171436",
     "com.miui.securityadd": "9.11.58-240108.0.1",
-    "com.miui.securitycenter": "8.8.0-240109.0.1",
+    "com.miui.securitycenter": "8.8.3-240129.0.1",
     "com.miui.securitycore": "1.2.1-15-240103",
-    "com.miui.securityinputmethod": "3.2.3",
+    "com.miui.securityinputmethod": "3.2.7",
     "com.miui.securitymanager": "10.0",
     "com.miui.themestore": "12.0",
     "com.miui.thirdappassistant": "4.5",
@@ -90,10 +90,10 @@
     "com.xiaomi.macro": "2.2.4.S",
     "com.xiaomi.market": "5.4.3",
     "com.xiaomi.metoknlp": "6.0.14",
-    "com.xiaomi.mi_connect_service": "3.1.593.10",
+    "com.xiaomi.mi_connect_service": "3.1.704.10",
     "com.xiaomi.mibrain.speech": "1.5.2",
     "com.xiaomi.migameservice": "0.7.0-B",
-    "com.xiaomi.mirror": "15.01.03.c",
+    "com.xiaomi.mirror": "15.01.08.a",
     "com.xiaomi.mis": "0.5.11-2023122314",
     "com.xiaomi.misettings": "2.9.9.72-fold",
     "com.xiaomi.payment": "2.7.2",
@@ -104,5 +104,5 @@
     "com.xiaomi.vipaccount": "4.4.8.P",
     "com.xiaomi.xaee": "0.2",
     "com.xiaomi.xmsf": "7.0.1-C",
-    "miui.systemui.plugin": "15.0.1.76.0"
+    "miui.systemui.plugin": "15.0.2.39.0"
 }
