--- a/phone/app_code.json
+++ b/phone/app_code.json
@@ -1,30 +1,30 @@
 {
     "cn.wps.moffice_eng.xiaomi.lite": 350,
     "com.android.browser": 170802200,
-    "com.android.calendar": 15000105,
-    "com.android.camera": 520007903,
-    "com.android.contacts": 509,
+    "com.android.calendar": 15000300,
+    "com.android.camera": 520013800,
+    "com.android.contacts": 5101,
     "com.android.deskclock": 1303001500,
-    "com.android.email": 1042001,
+    "com.android.email": 1043001,
     "com.android.fileexplorer": 5025,
-    "com.android.incallui": 998,
-    "com.android.mms": 15000009,
-    "com.android.providers.downloads.ui": 1231011006,
-    "com.android.quicksearchbox": 210030157,
+    "com.android.incallui": 1082,
+    "com.android.mms": 15000322,
+    "com.android.providers.downloads.ui": 1231011007,
+    "com.android.quicksearchbox": 210030158,
     "com.android.soundrecorder": 500179,
-    "com.android.thememanager": 4236,
+    "com.android.thememanager": 4237,
     "com.android.updater": 847,
-    "com.baidu.input_mi": 4263,
+    "com.baidu.input_mi": 4266,
     "com.duokan.phone.remotecontroller": 6353,
     "com.iflytek.inputmethod.miui": 8604,
     "com.mfashiongallery.emag": 2023120400,
     "com.mi.health": 323003,
-    "com.milink.service": 150010006,
+    "com.milink.service": 150010007,
     "com.mipay.wallet": 20577485,
-    "com.miui.accessibility": 23120610,
-    "com.miui.aod": 21702094,
-    "com.miui.backup": 6516,
-    "com.miui.bugreport": 15000005,
+    "com.miui.accessibility": 24010410,
+    "com.miui.aod": 22102000,
+    "com.miui.backup": 6518,
+    "com.miui.bugreport": 15000208,
     "com.miui.calculator": 315000014,
     "com.miui.carlink": 102000001,
     "com.miui.cit": 49,
@@ -32,81 +32,83 @@
     "com.miui.cloudbackup": 1120106121,
     "com.miui.cloudservice": 112000191,
     "com.miui.compass": 1500111,
-    "com.miui.contentcatcher": 20231208,
+    "com.miui.contentcatcher": 20231222,
     "com.miui.contentextension": 30012,
     "com.miui.core": 1201599,
-    "com.miui.extraphoto": 200060000,
-    "com.miui.gallery": 407556,
+    "com.miui.extraphoto": 200070001,
+    "com.miui.gallery": 407559,
     "com.miui.greenguard": 920231222,
-    "com.miui.guardprovider": 209,
-    "com.miui.home": 439147750,
-    "com.miui.huanji": 42300,
+    "com.miui.guardprovider": 211,
+    "com.miui.home": 439147947,
+    "com.miui.huanji": 42400,
     "com.miui.hybrid": 11060601,
     "com.miui.maintenancemode": 16,
-    "com.miui.mediaeditor": 4587617,
+    "com.miui.mediaeditor": 4592992,
     "com.miui.mediaviewer": 2023123002,
-    "com.miui.miinput": 23090516,
+    "com.miui.miinput": 23092709,
     "com.miui.miservice": 15000005,
     "com.miui.mishare.connectivity": 22105,
     "com.miui.misound": 240118,
-    "com.miui.miwallpaper": 500320000,
+    "com.miui.miwallpaper": 500325000,
     "com.miui.newhome": 11171,
     "com.miui.newmidrive": 112000607,
     "com.miui.nextpay": 1420,
     "com.miui.notes": 724,
     "com.miui.notification": 1010610,
     "com.miui.packageinstaller": 52010,
-    "com.miui.personalassistant": 50903,
+    "com.miui.personalassistant": 50905,
     "com.miui.phrase": 10054,
-    "com.miui.player": 4190105,
-    "com.miui.screenrecorder": 21300091,
+    "com.miui.player": 4210009,
+    "com.miui.presale": 30311,
+    "com.miui.screenrecorder": 21300131,
     "com.miui.screenshot": 10400103,
-    "com.miui.securityadd": 91158,
-    "com.miui.securitycenter": 40000880,
-    "com.miui.securitycore": 40000121,
-    "com.miui.securityinputmethod": 323,
+    "com.miui.securityadd": 91159,
+    "com.miui.securitycenter": 40000884,
+    "com.miui.securitycore": 40000122,
+    "com.miui.securityinputmethod": 327,
     "com.miui.securitymanager": 10,
     "com.miui.themestore": 12,
     "com.miui.thirdappassistant": 1028,
-    "com.miui.touchassistant": 150000091,
+    "com.miui.touchassistant": 150000101,
     "com.miui.tsmclient": 1435,
     "com.miui.uireporter": 20204,
     "com.miui.video": 2023110790,
     "com.miui.virtualsim": 655,
     "com.miui.vpnsdkmanager": 24,
-    "com.miui.weather2": 15000600,
+    "com.miui.weather2": 15000701,
     "com.miui.yellowpage": 202311140,
     "com.mobiletools.systemhelper": 31,
-    "com.sohu.inputmethod.sogou.xiaomi": 1946,
+    "com.sohu.inputmethod.sogou.xiaomi": 1966,
     "com.tencent.soter.soterserver": 230417,
     "com.unionpay.tsmservice.mi": 52,
     "com.xiaomi.ab": 167,
     "com.xiaomi.account": 323120100,
-    "com.xiaomi.aiasst.service": 1822,
+    "com.xiaomi.aiasst.service": 1849,
     "com.xiaomi.aiasst.vision": 405006002,
     "com.xiaomi.aicr": 2024010911,
     "com.xiaomi.aireco": 101011020,
     "com.xiaomi.barrage": 311,
     "com.xiaomi.cameratools": 2401080,
     "com.xiaomi.gamecenter.sdk.service": 8400201,
-    "com.xiaomi.joyose": 312,
+    "com.xiaomi.joyose": 315,
     "com.xiaomi.location.fused": 14000,
     "com.xiaomi.macro": 31220522,
-    "com.xiaomi.market": 40005262,
+    "com.xiaomi.market": 40005340,
     "com.xiaomi.metoknlp": 14014,
     "com.xiaomi.mi_connect_service": 3001704,
     "com.xiaomi.mibrain.speech": 52,
-    "com.xiaomi.migameservice": 70,
-    "com.xiaomi.mirror": 150103,
+    "com.xiaomi.migameservice": 100524,
+    "com.xiaomi.mirror": 150108,
     "com.xiaomi.mis": 511,
     "com.xiaomi.misettings": 231516013,
     "com.xiaomi.payment": 2003048,
-    "com.xiaomi.registration": 21,
+    "com.xiaomi.registration": 23,
     "com.xiaomi.scanner": 1322032404,
     "com.xiaomi.simactivate.service": 1230828,
+    "com.xiaomi.uatalive": 1,
     "com.xiaomi.ugd": 120,
     "com.xiaomi.vipaccount": 230809,
     "com.xiaomi.xaee": 2,
-    "com.xiaomi.xmsf": 70000001,
-    "miui.systemui.plugin": 150020200
+    "com.xiaomi.xmsf": 70000018,
+    "miui.systemui.plugin": 150023900
 }
